# Cairn

./: .gitignore  CONTRIBUTING.md  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
cairn/: __init__.py  trace.py
cairn/api/: main.py  schemas.py
cairn/crew/: __init__.py  agents.py  crew.py  llm.py  parsing.py  tasks.py  tools.py
cairn/retrieval/: __init__.py  bm25_index.py  embeddings.py  hybrid.py  store.py
tests/: test_api.py  test_bm25.py  test_crew.py  test_crewai_integration.py  test_embeddings.py  test_hybrid.py  test_parsing.py  test_store.py
